# pt-journal

./: .gitignore  ARCHITECTURE.md  BUGFIX_GTK_VIEWPORT.md  CEHTM v12 - Ric Messier, CEH, GSEC, CISSP.txt  CEH_EXPANSION_GUIDE.md  CEH_IMPLEMENTATION_SUMMARY.md  CEH_MISSING_TOPICS_RESEARCH.md  CODEBASE_INDEX.md  COMPTIA_QUIZ_CONTENT_SUMMARY.md  Cargo.toml  Certified Ethical Hacker (CEH) Study Guide - Matt Walker.txt  Certified Information Systems Security Pro - Ted Jordan, Ric Daza.txt  CompTIA PenTest+ Prep MCQs Practice Guide for CompTIA Certification Exam (Edu., PolyLearning) (Z-Library).txt  CompTIA PenTest_ Study Guide_ Exam PT0-003 - Chapple, Mike;Shimonski, Robert;Seidl, Dav.txt  CompTIA Pentest+ (Practice Exams) (Karamagi, Robert) (Z-Library).txt  CompTIA Security+ Practice.txt  CompTIA Security+.txt  CompTIA Security+Exam.txt  CompTIA Security.txt  DEVELOPMENT_PLAN.md  KISS_SIMPLIFICATION_ANALYSIS.md  Linux For Hackers_ Getting Started with Ne - Fastskill.txt  PENTEST_QUIZ_CONTENT_SUMMARY.md  PROGRESS_SECURITY_TOOLS.md  PROJECT_COMPLETION_REPORT.md  PROJECT_OVERVIEW.md  QUIZ_SYSTEM_DESIGN.md  README.md  REFACTOR_CONFIG_SUMMARY.md  REFACTOR_SUMMARY.md  ROADMAP_SECURITY_TOOLS.md  Redefining Hacking_ A Comprehensive Guide - Omar Santos.txt  SESSION_FOLDER_STRUCTURE.md  TOOL_INSTRUCTIONS_FEATURE.md  Traditional vs Generative AI Pentesting; A - Yassine Maleh.txt  build_output.txt  clippy_output.txt  clippy_output_2.txt  clippy_output_3.txt  clippy_output_4.txt  (+9 more)
.github/: copilot-instructions.md
docs/: MODULE_CONTRACTS.md  OLLAMA_SETUP.md  PERFORMANCE_BENCHMARKS.md  README.md  REFACTORING_TODO.md  TDD_COMPLETION_REPORT.md  TESTING.md  architecture.md  chatbot.md  code_review_pt_journal.md  configuration.md  roadmap.md
(+399 files in other folders)
