[package]
name = "pt-journal"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.6" }
relm4 = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
directories = "5"
pulldown-cmark = "0.10"
once_cell = "1"

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"
proptest = "1.0"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false
