[package]
name = "pt-journal"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
vte = { package = "vte4", version = "0.8" }
adw = { package = "libadwaita", version = "0.7" }
relm4 = { version = "0.9", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
anyhow = "1"
thiserror = "1"
directories = "5"
dirs = "5"
pulldown-cmark = "0.10"
once_cell = "1"
regex = "1"
async-channel = "2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
assert_matches = "1.5"
httpmock = "0.6"
test-log = { version = "0.2", features = ["log"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false
